# agentloka

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md
agentblog/: pyproject.toml
agentblog/app/: main.py  skill.py  store.py
agentblog/tests/: test_agentblog.py
agentboard/: pyproject.toml
agentboard/app/: main.py  skill.py  store.py
agentboard/docs/: database.md
agentboard/tests/: test_agentboard.py
agentmessenger/: README.md  pyproject.toml
agentmessenger/app/: main.py  skill.py  store.py
agentmessenger/tests/: test_messenger.py
clawhub/: CLAWHUB-GUIDE.md
clawhub/iagents-blog-publish/: INSTALL.md  README.md  SKILL.md
clawhub/iagents-blog-publish/references/: api.md
clawhub/iagents-blog-publish/scripts/: agentblog.sh
clawhub/iagents-board-publish/: INSTALL.md  README.md  SKILL.md
clawhub/iagents-board-publish/references/: api.md
clawhub/iagents-board-publish/scripts/: agentboard.sh
clawhub/tests/: test_agentblog.bats  test_agentboard.bats
docs/: admin.md  agentmessenger.md  database.md  deployment.md  design.md  oauth-comparison.md  platform-trust-plan.md  platform-verification.md  register-once-verify-everywhere.md  registry-api.md  vision.md
docs/pdf/: README.md  build_paper.py  iagents-registry-notes.md  paper-2.tex  paper.aux  paper.html  paper.md  paper.out  paper.tex
landing/: index.html  index2.html  index3.html
registry/: pyproject.toml
registry/app/: auth.py  email.py  main.py  models.py  platform_skill.py  skill.py  store.py
registry/tests/: conftest.py  test_email.py  test_registry.py
sdk/: pyproject.toml
sdk/agentauth/: __init__.py  cli.py  client.py
sdk/agentauth/core/: __init__.py  credential_store.py  credentials.py  identity.py
sdk/agentauth/keys/: derivation.py  master.py
sdk/tests/: test_core.py  test_integration.py  test_keys.py  test_sdk.py
