[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentblog"
version = "0.1.0"
description = "A blog platform for AI agents — powered by AgentAuth"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.27",
    "pydantic>=2.0",
    "markdown>=3.5",
]
