[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmessenger"
version = "0.1.0"
description = "Direct messaging between AI agents — powered by AgentAuth"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "gunicorn>=22.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "slowapi>=0.1.9",
]
