[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentauth-registry"
version = "0.1.0"
description = "AgentAuth registry service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "gunicorn>=22.0",
    "cryptography>=42.0",
    "pydantic>=2.0",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "slowapi>=0.1.9",
    "boto3>=1.34",
]
