[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentauth"
version = "0.1.0"
description = "The identity layer for AI agents"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.scripts]
agentauth = "agentauth.cli:main"
